--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ theme: jekyll-theme-cayman
 title: Avoiding Side Effects in Complex Environments
 description: Making agents behave with an unsupervised penalty term.
 logo: /aup.png
-repo_url: https://github.com/neale/safelife-k2
-permalink: https://github.com/neale/safelife-k2
+repo_url: https://github.com/chasedenecke/chasedenecke.github.io
+permalink: https://github.com/chasedenecke/chasedenecke.github.io
 plugins:
   - 'jekyll-github-metadata'
+port: 4001
